@@ -63,7 +63,7 @@ if ( empty ( $friendly ) ) {
 }
 $eventinfo = ( empty ( $eventinfo ) ? '' : $eventinfo );
 $trailerStr = print_trailer();
-print_header ( array ( 'js/popups.php/true', 'js/dblclick_add.js/true' ),
+print_header( array( 'js/popups.js/true', 'js/dblclick_add.js/true' ),
   generate_refresh_meta(), '', false, false, false, false );
 
 echo <<<EOT
