@@ -33,8 +33,9 @@ if ( empty ( $friendly ) ) {
   $printerStr = generate_printer_friendly ( 'month.php' );
 }
 set_today ( $date );
-print_header ( array ( 'js/popups.php/true' ),
-  '<script type="text/javascript" src="includes/js/weekHover.js"></script>' );
+print_header( array( 'js/popups.php/true' ),
+  '<script type="text/javascript" src="includes/js/weekHover.js?'
+ . filemtime( 'includes/js/weekHover.js' ) . '"></script>' );
 $trailerStr = print_trailer();
 
 $next = mktime ( 3, 0, 0, $thismonth + 1, 1, $thisyear );
